# cosmicpython-book

./: pyproject.toml
chapter_01/: README.md  model.py  test_allocate.py  test_batches.py
chapter_02/: model.py  orm.py  repository.py  test_orm.py  test_repository.py
chapter_03/: README.md
